--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
     agent any
+    environment{
+        REPO_URL = "https://githib.com/prtkdave/devops"
     stages {
         stage('Build') {
             steps {
@@ -7,8 +9,11 @@ pipeline {
                 sh '''
                     echo "Multiline shell steps"
                     ls
-                '''
+                    echo $REPO_URL
+                   '''
+                }
             }
         }
     }
 }
+
