--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,8 +18,8 @@ pipeline {
 
        stage('Checkout external proj') {
            steps {
-                git branch: 'master',
-                credentialsId: 'prtkdave',
+                git branch: '*/master',
+                credentialsId: '5b09e5e8-aca5-4bc3-ae64-da77adb44743',
                 url: '$REPO_URL'
 
             sh "ls -lat"
