--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,9 +18,10 @@ pipeline {
 
        stage('Checkout external proj') {
            steps {
+                 
                 git branch: '*/develop',
                 credentialsId: '5b09e5e8-aca5-4bc3-ae64-da77adb44743',
-                url: '$REPO_URL'
+                url: 'https://github.com/prtkdave/devops'
 
             sh "ls -lat"
         }
