--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,9 +19,10 @@ pipeline {
        stage('Checkout external proj') {
            steps {
                  
-                git branch: '*/develop',
-                credentialsId: '5b09e5e8-aca5-4bc3-ae64-da77adb44743',
-                url: 'https://github.com/prtkdave/devops'
+                #git branch: '*/develop',
+               # credentialsId: '5b09e5e8-aca5-4bc3-ae64-da77adb44743',
+               # url: 'https://github.com/prtkdave/devops'
+               checkout([$class: 'GitSCM', branches: [[name: '*/develop']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/prtkdave/devops']]])
 
             sh "ls -lat"
         }
